@@ -1,3 +1,7 @@
+2006-10-28  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* src/baobab-utils.c (set_label_scan): drop GString usage.
+
 2006-10-28  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baobab-scan.c: use 512, not io_block_size.
